--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,115 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
-  color: inherit;
+  text-decoration: none;
+}
+.nav-tabs {
+  padding-left: 0;
+}
+.nav-item {
+  width: calc(100% / 3);
+}
+.nav-item button {
+  display: block;
+  width: 100%;
+}
+.service-24 {
+  color: #8d97ad;
+  font-weight: 300;
+}
+
+.service-24 h1,
+.service-24 h2,
+.service-24 h3,
+.service-24 h4,
+.service-24 h5,
+.service-24 h6 {
+  color: #3e4555;
+}
+
+.service-24 .card.card-shadow {
+  box-shadow: 0px 0px 10px #ccc;
+}
+
+.service-24 a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.service-24 .card-hover:hover {
+  background: linear-gradient(to right, #007bff 0%, #036ee0 100%);
+}
+
+.service-24 .card-hover:hover .bg-success-grediant {
+  color: #ffffff;
+  text-fill-color: #ffffff;
+  -webkit-text-fill-color: #ffffff;
+}
+
+.service-24 .card-hover:hover .ser-title {
+  color: #ffffff;
+}
+
+.service-24 .bg-success-grediant {
+  background: linear-gradient(to right, #007bff 0%, #036ee0 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  font-size: 50px;
+}
+
+.service-24 .wrap-service-24 .card {
+  -o-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+  -webkit-transition: 0.3s ease-out;
+}
+
+.service-24 .wrap-service-24 .card:hover {
+  -ms-transform: translateY(-10px);
+  transform: translateY(-10px);
+  -webkit-transform: translateY(-10px);
+  cursor: pointer;
+}
+
+.service-24 .btn-outline-success {
+  color: #007bff !important;
+  background-color: transparent;
+  border-color: #007bff;
+}
+
+.service-24 .btn-outline-success:hover {
+  background: #007bff;
+  border-color: #007bff;
+  color: #ffffff !important;
+}
+
+.service-24 .btn-md {
+  padding: 15px 45px;
+  font-size: 16px;
+}
+.icons svg {
+  transition: 0.3s;
+}
+.icons svg:hover {
+  fill: #007bff;
+}
+.text-hover {
+  transition: 0.3s;
+}
+.text-hover:hover {
+  color: #007bff !important;
+}
+.form-select {
+  background-position: right 0.75rem center !important;
+}
+textarea {
+  resize: none !important;
+}
+.animate-spin {
+  width: 100%;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
   }
 }
